a.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-app
  template:
    metadata:
      labels:
        app: echo-app
    spec:
      containers:
        - name: echo-container
          image: registry.cluster.wik.cloud/public/echo
          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: echo-service
spec:
  selector:
    app: echo-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: v1
kind: Pod
metadata:
  name: port-forward-pod
spec:
  containers:
    - name: port-forward-container
      image: alpine:latest
      command: ["/bin/sh", "-c"]
      args: ["while true; do sleep 3600; done"]
