echo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress
spec:
  rules:
  - host: "votre-nom-de-domaine.local" # Remplacez par un nom de domaine local de votre choix
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: echo-service
            port:
              number: 80
